# bemquad

./: .gitignore  CMakeLists.txt  README.md
include/: Adaptive1DClenshaw.h  Adaptive1DGauss.h  Adaptive1DTrapezoidal.h  Adaptive2DClenshaw.h  Adaptive2DPolarClenshaw.h  Element.h  IQuadrature.h  Integrator.h  Kernel.h  MaterialParams.h  Point3d.h  common.h
src/: IQuadrature.cpp  MaterialParams.cpp  Point3d.cpp
tests/: CMakeLists.txt  DblExpQuadTest.cpp  adaptive2DCCTest.cpp  adaptiveTrap.cpp  complexQuadratureTest.cpp
